--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "paper-elements": "Polymer/paper-elements#~0.5.3",
     "core-elements": "Polymer/core-elements#~0.5.3",
     "firebase": "~2.1.1",
-    "firebase-element": "Polymer/firebase-element#~0.5.3"
+    "firebase-element": "Polymer/firebase-element#~0.5.3",
+    "c3": "~0.4.9",
+    "d3": "~3.5.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
